[package]
name = "crawler-2ch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.17"
reqwest = "0.11.11"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
tokio = { version = "1.20.1", features = ["full"] }


[profile.release]
strip = true
lto = true
codegen-units = 1

